v1.1.0.1
--------

v1.1.0.0
--------
~~~This is a mandatory update!!~~~
Net.cpp SendData Interruption/Idle Peer fix
RefreshRecentConnections
GUI fix (Auto refresh My Masternode Info)
Retarget Algorithm changed from Peercoin Retarget algo to OSS (OrbitShield)
PoW Algorithm Changed from Scrypt to ASIC-Resistant Neoscrypt
Several networking issue improved
Documentation Updated
Increased BlockVersion to 8 from 7
Increased Proto, PoolProto, InstantXProto to 60029
Added Disconnect <60028 Proto Function
Added Upgrades that Improve and Secure Masternode Features Better
Added VisualCode Debugging Example Configurations
Added `backtoblock` function to easily rollback your blockheight
Added File Menu Options to Easily Open Config & Data Directory
Fixed bug with trying to send and wallet being unresponsive if not enough balance for fees
Fixed Permissions in secp256k & leveldb
Increased min peers to be able to stake to 5 from 2
Masternodes are no longer capable of setting an external reward address

v1.0.0.3
--------
Ignitiond binary will now compile out to ignitiond (lower case)
Unlock Bugs Fixed - For issue https://github.com/ignitioncoin/ignitioncoin/issues/10
GitIgnore ignores more files
Fixed bug with a help response repeating itself
Removing depricated "masternode winners" command
UI improvement

v1.0.0.2
--------
Fixed mining/staking seperated difficulty reporting
Enabled testnet with increased reward.
Masternode pubkey reporting fix.
Updated many docs in the github repo

v1.0.0.1
--------
GUI Update - New Logo & Graphics Integrated

v1.0.0b
-------
Anti-Virus False Positive Fix

v1.0.0a
-------
Initial Ignition Release

>>>>>>Forked to Ignition Coin

v2.0.3.2
--------
*First stable release on new codebase

v2.0.3.3
--------
*Forced DNS Seeding
*IRC Removed (now wallet do not stay in memory after exit)
*Added Peer/Ban tab in Debug console

v2.0.3.4
--------
*Reworked IRC is back
*Fixed bad per connection without uPnP
*Fixed masternode list page glitch