@@ -1,0 +1,65 @@
+# Ignition CircleCI 2.0 configuration file
+
+version: 2
+jobs:
+  build:
+    docker:
+      # Ubuntu 14.04 base image
+      - image: ubuntu:14.04
+        
+    working_directory: ignition/src/github.com/ignitioncoin/ignitioncoin
+
+    steps:
+    # Dependencies & setup
+    - run:
+        name: Install base dependencies
+        command: | 
+          sudo apt-get -y update && sudo apt-get -y upgrade
+          sudo apt-get -y install git
+          sudo apt-get -y install build-essential libssl-dev libdb++-dev libboost-all-dev libcrypto++-dev libqrencode-dev libminiupnpc-dev libgmp-dev libgmp3-dev autoconf autogen automake libtool 
+    - run:
+        name: Install QT dependencies
+        command: apt-get -y install qt5-default qt5-qmake qtbase5-dev-tools qttools5-dev-tools
+    - run:
+        name: Set up test directories
+        command: | 
+          mkdir ~/logs
+          mkdir ~/logs/daemon
+          mkdir ~/logs/qt
+          mkdir ~/.Ignition
+          echo "$(nproc)"
+
+    # Builds & tests
+    - checkout
+    - run:
+        name: Build daemon
+        command: | 
+          cd src  
+          make -j4 -f makefile.unix USE_UPNP=1 |& tee ~/logs/daemon/daemon-make.log
+    - run:
+        name: Test daemon
+        command: |
+          cd bin
+          printf "rpcuser=ICrpc\nrpcpassword=x1y2z3\n" > ~/.Ignition/Ignition.conf
+          ./ignitiond --datadir=/root/.Ignition -daemon && sleep 5s
+          ./ignitiond --datadir=/root/.Ignition getinfo |& tee -a ~/logs/daemon/daemon-test.log
+          ./ignitiond --datadir=/root/.Ignition stop |& tee -a ~/logs/daemon/daemon-test.log
+    
+    - run:
+        name: Build QT
+        command: |
+          qmake USE_UPNP=1 Ignition.pro |& tee ~/logs/qt/qt-qmake.log
+          make -j4 |& tee ~/logs/qt/qt-make.log
+
+      # Log artifacts
+    - store_artifacts:
+        path: ~/logs/daemon/daemon-make.log
+    - store_artifacts:
+        path: ~/.Ignition/debug.log
+        destination: /root/logs/daemon/debug.log
+    - store_artifacts: 
+        path: ~/logs/daemon/daemon-test.log
+    - store_artifacts:
+        path: ~/logs/qt/qt-qmake.log
+    - store_artifacts:
+        path: ~/logs/qt/qt-make.log    
