@@ -1,5 +1,6 @@
 v1.1.0.1
 --------
+Added CircleCI configuration
 
 v1.1.0.0
 --------
